# SlicerModalityConverter

./: .gitignore  CMakeLists.txt  LICENSE  MODEL_LICENSE  README.md
ImageTranslator/: CMakeLists.txt  ImageTranslator.py
ImageTranslator/ImageTranslatorLib/: ModelBase.py
ImageTranslator/ImageTranslatorLib/ModelsImpl/: FedSynthBrainBaseModel.py  FedSynthBrainFuModel.py  FedSynthBrainLiModel.py  FedSynthBrainLietAlModel.py  FedSynthBrainModelsUtils.py  FedSynthBrainSpadeaModel.py
ImageTranslator/ImageTranslatorLib/UI/: HelpDialog.py  utils.py
ImageTranslator/Resources/Models/: metadata.json
ImageTranslator/Resources/UI/: ImageTranslator.ui
ModalityConverter/: CMakeLists.txt  ModalityConverter.py
ModalityConverter/ModalityConverterLib/: ModelBase.py
ModalityConverter/ModalityConverterLib/ModelsImpl/: CT2PETMoriModel.py  FedSynthBrainBaseModel.py  FedSynthBrainFuModel.py  FedSynthBrainLiModel.py  FedSynthBrainSpadeaModel.py  FedSynthCBCTPix2PixModel.py  Unet2PixT1T2Model.py
ModalityConverter/ModalityConverterLib/UI/: HelpDialog.py  utils.py
ModalityConverter/ModalityConverterLib/Utils/: customTransformsUtils.py  modelLoadUtils.py
ModalityConverter/Resources/Models/: metadata.json
ModalityConverter/Resources/UI/: ModalityConverter.ui
SyntheticImageQualityAssurance/: CMakeLists.txt  SyntheticImageQualityAssurance.py
SyntheticImageQualityAssurance/Resources/Models/: metadata.json  metadata_sqa.json
SyntheticImageQualityAssurance/Resources/UI/: SyntheticImageQualityAssurance.ui
SyntheticImageQualityAssurance/SyntheticImageQualityAssuranceLib/: ModelBase.py
SyntheticImageQualityAssurance/SyntheticImageQualityAssuranceLib/ModelsImpl/: MAESlicesCTQAModel.py
SyntheticImageQualityAssurance/SyntheticImageQualityAssuranceLib/Utils/: modelLoadUtils.py
